2009-03-17  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/tarball-conversion-stable.config: fix limit for
	gnome-netstatus, add Pango perl binding (commented out for now)
	* versions-stable: update for 2.26.0

2009-03-16  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/sample-tarball-stable.jhbuildrc:
	* smoketesting/tarball-conversion-stable.config: prepare for switch to
	2.26
	* smoketesting/sample-tarball.jhbuildrc:
	* smoketesting/tarball-conversion.config: tweak for consistency with
	stable version.

2009-03-04  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/sample-tarball.jhbuildrc:
	* versions: update for 2.25.92

2009-02-18  Frederic Crozat  <fcrozat@mandriva.com>

	* versions: fix version for Gnome2-Canvas

2009-02-19  Frederic Crozat  <fcrozat@mandriva.com>

	* smoketesting/sample-tarball.jhbuildrc:
	* smoketesting/tarball-conversion.config:
	* versions: update for 2.25.91

2009-02-06  Frederic Peters  <fpeters@0d.be>

	* smoketesting/convert-to-tarballs.py: cache md5sum of tarballs

2009-02-05  Frederic Peters  <fpeters@0d.be>

	* smoketesting/sample-tarball.jhbuildrc:
	* versions: update for 2.25.90

2009-02-01  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/tarball-conversion.config: remove gnome-volume-manager
	and nautilus-cd-burner (deprecated now), and move intltool to an
	external dependency

2009-01-31  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/tarball-conversion.config: remove gnome-build
	  (integrated in anjuta)

2008-01-21  Lucas Rocha  <lucasr@gnome.org>

	* smoketesting/tarball-conversion.config: add brasero,
	gnome-user-share and evolution-mapi.
	* smoketesting/sample-tarball.jhbuildrc:
	* versions: update for 2.25.5

2009-01-09  Frederic Peters  <fpeters@0d.be>

	* smoketesting/tarball-conversion.config: removed GTK+ 2.15 limit.

2008-01-07  Lucas Rocha  <lucasr@gnome.org>

	* versions: fix perl modules and gtk+ versions.

2008-01-07  Lucas Rocha  <lucasr@gnome.org>
